GNOME Bugzilla – Bug 748287
glmixer: Possible null pointer dereference
Last modified: 2015-04-22 13:06:22 UTC
While printing error message when context fails, error variable is not being used anymore so it will lead to null pointer dereference. Hence changing the error message.
Created attachment 302136 [details] [review] patch to fix null pointer dereference
commit 7e3cd63f870fc3be92553f25ca685413e8fc20c3 Author: Vineeth T M <vineeth.tm@samsung.com> Date: Wed Apr 22 18:54:45 2015 +0900 glmixer: Possible null pointer dereference While printing error message when context fails, error variable is not being used anymore so it will lead to null pointer dereference https://bugzilla.gnome.org/show_bug.cgi?id=748287